--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   <body>
     <main id="main"></main>
     <script type="text/javascript" src="index.js"></script>
+    <div>
+      
+    </div>
+
+
   </body>
 </html>
